# desktop-pet-with-llms-linux

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.github/: platform-diff-allowlist.txt
.github/workflows/: super-linter.yml
cmake/: AmaiGirl.rc  AppxManifest.xml.in  Info.plist.in  xiaomo.desktop
docs/: demo-gallery.en.md  demo-gallery.md
llm/: README.md  chinese_tokenizer.py  model.py  quantize_checkpoints_to_gguf.py  requirements.txt  train.py  train_instruction.py  train_petchat.py
llm/checkpoints/anime/: generation_config.json  model.safetensors.index.json
llm/checkpoints/universal/: config.json
llm/core/: __init__.py  attention.py  config.py  dataset.py  layers.py  model.py  rope.py
llm_wsl/: README.md  chinese_tokenizer.py  custom_ops.py  model.py  requirements.txt  setup.py  setup_instruction.py  setup_petchat.py  train.py  train_instruction.py  train_petchat.py
llm_wsl/core/: attention.py  config.py  dataset.py  layers.py  model.py  rope.py  transformer.py
llm_wsl/csrc/: bindings.cpp  ops.cu
llm_wsl/csrc_instruction/: bindings.cpp  ops.cu  thread_manager.cpp
llm_wsl/csrc_petchat/: bindings.cpp  ops.cu  thread_manager.cpp
res/i18n/: amaigirl_en_US.qm  amaigirl_en_US.ts
res/models/: live2d_asset_db.json
scripts/: check_platform_branch_diff.py  check_platform_macro_style.py  github_release_upload.py  install_and_build.ps1
src/ai/: ChatController.cpp  ChatController.hpp  LocalLlmClient.cpp  LocalLlmClient.hpp
src/app/: Version.hpp  main.cpp
src/audio/: OfflineVoiceService.cpp  OfflineVoiceService.hpp
src/common/: SettingsManager.cpp  SettingsManager.hpp  Utils.cpp  Utils.hpp
src/engine/: Expression.cpp  Expression.hpp  Live2DCore.cpp  Live2DCore.hpp  Model.cpp  Model.hpp  Motion.cpp  Motion.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Renderer.cpp  Renderer.hpp
src/ui/: ChatWindow.cpp  ChatWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp
src/ui/era-style/: EraButton.cpp  EraButton.hpp  EraChatWidgets.cpp  EraChatWidgets.hpp  EraComboBox.cpp  EraComboBox.hpp  EraLineEdit.cpp  EraLineEdit.hpp  EraLinuxWindowTheme.cpp  EraMacWindowTheme.hpp  EraMacWindowTheme.mm  EraPlainTextEdit.cpp  EraPlainTextEdit.hpp  EraStyleColor.hpp  EraStyleHelper.cpp  EraStyleHelper.hpp  EraSwitch.cpp  EraSwitch.hpp  EraTabBar.cpp  EraTabBar.hpp  EraTextEdit.cpp  EraTextEdit.hpp  EraWinWindowTheme.cpp
src/ui/theme/: ThemeApi.cpp  ThemeApi.hpp  ThemeWidgets.hpp
